--- a/index.html
+++ b/index.html
@@ -25,22 +25,40 @@
 </div>
 
 
-  <div id="overlay" onclick="hideDetails()"></div>
-  <div id="details-container">
-    <div class="product-card-overlay details-card">
-      <span class="close-btn" onclick="hideDetails()">&#10005;</span>
-      <div class="product-details">
+<div id="overlay" onclick="hideDetails()"></div>
+<div id="details-container">
+  <div class="product-card-overlay details-card">
+    <span class="close-btn" onclick="hideDetails()">&#10005;</span>
+    <div class="product-details">
+      <div class="product-details-text">
         <h2>Сосистер Бит</h2>
         <p>Бот для воспроизведения музыки с платформы YouTube</p>
-        <div class="button-group">
-          <button onclick="addToCart()">Добавить на Discord сервер</button>
-        </div>
       </div>
       <div class="product-image">
         <img src="img/1422443363_647565369.jpg" alt="Сосистер Бит">
       </div>
     </div>
+    <div class="product-details-description">
+      <h2>Описание</h2>
+      <p>Бот может воспроизводить музыка по ссылке с платформы YouTube</p>
+      <p>Может осуществлять поиск, а так же воспроизводить свои сохраненные плей-листы</p>
+      <p>Есть возможность создавать свои плей-листы,<br> которые будут работать на всех серверах где есть данный бот</p>
+    </div>
+    <div class="product-details-update">
+      <h2>Что нового добавлено</h2>
+      <p>Добавлена возможность скачивание композиций с платформы YouTube</p>
+    </div>
+    <div class="product-details-updatetime">
+      <h2>Последнее обновление</h2>
+      <p>17 Мая 2023г.</p>
+    </div>
+    <div class="button-group">
+      <button onclick="addToCart()">Добавить на Discord сервер</button>
+    </div>
   </div>
+</div>
+
+
 
 
 
