--- a/index.html
+++ b/index.html
@@ -39,18 +39,22 @@
       </div>
     </div>
     <div class="product-details-description">
-      <h2>Описание</h2>
-      <p>Бот может воспроизводить музыка по ссылке с платформы YouTube</p>
-      <p>Может осуществлять поиск, а так же воспроизводить свои сохраненные плей-листы</p>
-      <p>Есть возможность создавать свои плей-листы,<br> которые будут работать на всех серверах где есть данный бот</p>
+      <h2>Описание:</h2>
+      <p>Бот может воспроизводить музыка по ссылке с платформы YouTube.</p>
+      <p>Может осуществлять поиск, а так же воспроизводить свои сохраненные плей-листы.</p>
+      <p>Есть возможность создавать свои плей-листы,<br> которые будут работать на всех серверах где есть данный бот.</p>
     </div>
     <div class="product-details-update">
-      <h2>Что нового добавлено</h2>
-      <p>Добавлена возможность скачивание композиций с платформы YouTube</p>
+      <h2>Что нового добавлено:</h2>
+      <p>*Добавлена возможность скачивание композиций с платформы YouTube.</p>
     </div>
     <div class="product-details-updatetime">
-      <h2>Последнее обновление</h2>
+      <h2>Последнее обновление:</h2>
       <p>17 Мая 2023г.</p>
+    </div>
+    <br>
+    <div class="product-details-ps">
+      <p style="font-size: 10px;">*Размер файла не должен превышеть 8Мб</p>
     </div>
     <div class="button-group">
       <button onclick="addToCart()">Добавить на Discord сервер</button>
