--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="product-details-updatetime">
       <h2>Последнее обновление:</h2>
-      <p>17 Мая 2023г.</p>
+      <p>8 Июля 2023г.</p>
     </div>
     <br>
     <div class="product-details-ps">
