--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
         <h2>Что нового добавлено:</h2>
         <p>*Добавлена возможность скачивания композиций с платформы YouTube.</p>
       </div>
+      <div class="product-details-ps">
+        <p style="font-size: 10px;">*Размер файла не должен превышать 8Мб</p>
+      </div>
       <div class="product-details-updatetime">
         <h2>Последнее обновление:</h2>
         <p>8 Июля 2023г.</p>
       </div>
-      <br>
-      <div class="product-details-ps">
-        <p style="font-size: 10px;">*Размер файла не должен превышать 8Мб</p>
-      </div>
-      <div class="button-group">
+      <div class="button-group-overlay">
         <button onclick="addToCart()">Добавить на Discord сервер</button>
       </div>
     </div>
@@ -80,7 +79,7 @@
       alert("ВНИМАНИЕ! Наш сайт на текущий момент не адаптирован под мобильные устройства. Убедительная просьба использовать Desktop версию.");
     }
 
-    showAlert(); // Вызов функции showAlert при загрузке страницы
+    // showAlert(); // Вызов функции showAlert при загрузке страницы
   </script>
 </body>
 </html>
