Откат бота в обновлении

--- a/index.html
+++ b/index.html
@@ -44,14 +44,11 @@
       </div>
       <div class="product-details-update">
         <h2>Что нового добавлено:</h2>
-        <p>*Добавлена возможность скачивания композиций с платформы YouTube.</p>
-      </div>
-      <div class="product-details-ps">
-        <p style="font-size: 10px;">*Размер файла не должен превышать 8Мб</p>
+        <p>Откат в обновлении. Убрана возможность скачивания композиций с платформы YouTube.</p>
       </div>
       <div class="product-details-updatetime">
         <h2>Последнее обновление:</h2>
-        <p>8 Июля 2023г.</p>
+        <p>13 Августа 2023г.</p>
       </div>
       <div class="button-group-overlay">
         <button onclick="addToCart()">Добавить на Discord сервер</button>
