--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <h2>Описание:</h2>
         <p>Бот может воспроизводить музыку по ссылке с платформы YouTube.</p>
         <p>Может осуществлять поиск, а также воспроизводить свои сохраненные плей-листы.</p>
-        <p>Есть возможность создавать свои плей-листы,<br> которые будут работать на всех серверах, где есть данный бот.</p>
+        <p>Есть возможность создавать свои плей-листы,</p>
+        <p>которые будут работать на всех серверах, где есть данный бот.</p>
       </div>
       <div class="product-details-update">
         <h2>Что нового добавлено:</h2>
