Добавлена возможность очищать очередь трек-листа одним нажатием

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       </div>
       <div class="product-details-update">
         <h2>Что нового добавлено:</h2>
-        <p>Откат в обновлении. Убрана возможность скачивания композиций с платформы YouTube.</p>
+        <p>Добавлена возможность очищать очередь трек-листа одним нажатием.</p>
       </div>
       <div class="product-details-updatetime">
         <h2>Последнее обновление:</h2>
-        <p>13 Августа 2023г.</p>
+        <p>28 Января 2024г.</p>
       </div>
       <div class="button-group-overlay">
         <button onclick="addToCart()">Добавить на Discord сервер</button>
