Обновление Сосистер бит
Добавлена возможность повтора трека

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       </div>
       <div class="product-details-update">
         <h2>Что нового добавлено:</h2>
-        <p>Добавлена возможность очищать очередь трек-листа одним нажатием.</p>
+        <p>Добавлена возможность ставить на повтор текущий воспроизводимый трек.</p>
       </div>
       <div class="product-details-updatetime">
         <h2>Последнее обновление:</h2>
-        <p>28 Января 2024г.</p>
+        <p>7 Февраля 2024г.</p>
       </div>
       <div class="button-group-overlay">
         <button onclick="addToCart()">Добавить на Discord сервер</button>
